--- a/BBTDWeb/BBTD.Mvc/Views/Shared/_Layout.cshtml
+++ b/BBTDWeb/BBTD.Mvc/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
         </main>
     </div>
 
+    <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>
