--- a/BBTDWeb/BBTD.Mvc/Views/Shared/_Layout.cshtml
+++ b/BBTDWeb/BBTD.Mvc/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="BarcodeSlideshow">Slideshow</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Setup">Setup</a>
+                        </li>
                     </ul>
                 </div>
             </div>
