--- a/BBTDApp/BBTDApp/Resources/layout/activity_main.xml
+++ b/BBTDApp/BBTDApp/Resources/layout/activity_main.xml
@@ -1,32 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <LinearLayout
+        android:id="@+id/layoutRow1"
+        android:orientation = "horizontal" 
+        android:layout_width = "fill_parent" 
+        android:layout_height = "wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"> 
+
+        <TextView
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:text="Service URL"/>
+
+        <EditText
+            android:id="@+id/txtAuthority"
+            android:inputType="text" 
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="http://192.168.100.18"/>
+
+        <Button
+            android:id="@+id/btnScanAuthority"
+            android:text="Read"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_qrcode"
+            style="@style/button_text"/>
+  
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layoutRow2"
+        android:orientation = "horizontal" 
+        android:layout_width = "fill_parent" 
+        android:layout_height = "wrap_content"
+        android:layout_below="@id/layoutRow1"> 
+
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:text="Scan delay"/>
+
+        <EditText
+            android:id="@+id/txtDelay"
+            android:inputType="number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="10"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layoutRow3"
+        android:orientation = "horizontal" 
+        android:layout_width = "fill_parent" 
+        android:layout_height = "wrap_content"
+        android:layout_below="@id/layoutRow2"> 
+
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="Adaptive delay" />
+
+        <Switch
+            android:id="@+id/switchAdaptiveDelay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layoutRow4"
+        android:orientation = "horizontal" 
+        android:layout_width = "fill_parent" 
+        android:layout_height = "wrap_content"
+        android:layout_below="@id/layoutRow3"> 
+
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="Native scanning" />
+
+        <Switch
+            android:id="@+id/switchNativeScanning"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layoutRow5"
+        android:orientation = "horizontal" 
+        android:layout_width = "fill_parent" 
+        android:layout_height = "wrap_content"
+        android:layout_below="@id/layoutRow4"> 
+
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="Autofocus" />
+
+        <Switch
+            android:id="@+id/switchAutofocus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+        <Button
+            android:id="@+id/btnScanSingle"
+            android:text="Scan single"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="50"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:drawableLeft="@drawable/ic_scan"
+            style="@style/button_text"/>
 
-    </com.google.android.material.appbar.AppBarLayout>
+        <Button
+            android:id="@+id/btnScanContinuous"
+            android:text="Scan continuous"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="50"
+            android:layout_alignParentBottom="true"
+            android:layout_toRightOf="@id/btnScanSingle"
+            android:drawableLeft="@drawable/ic_scan"
+            style="@style/button_text"/>
 
-    <include layout="@layout/content_main" />
+    </LinearLayout>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</RelativeLayout>
