--- a/BBTDWeb/BBTD.Mvc/Views/Shared/_Layout.cshtml
+++ b/BBTDWeb/BBTD.Mvc/Views/Shared/_Layout.cshtml
@@ -20,13 +20,19 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark btn btn-outline-primary m-1" asp-area="" asp-controller="Setup" asp-action="Index">Setup</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="BarcodeSlideshow">Slideshow</a>
+                            <a class="nav-link text-dark btn btn-outline-primary m-1" asp-area="" asp-controller="SourceData" asp-action="Index">Source Data</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Setup">Setup</a>
+                            <a class="nav-link text-dark btn btn-outline-primary m-1" asp-area="" asp-controller="TestingArea" asp-action="Index">Testing Area</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark btn btn-outline-primary m-1" asp-area="" asp-controller="LogAnalysis" asp-action="LastLogList">Logs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark btn btn-outline-primary m-1" asp-area="" asp-controller="LogAnalysis" asp-action="OutputData">Output Data</a>
                         </li>
                     </ul>
                 </div>
