--- a/BBTDWeb/BBTD.Mvc/Views/SourceData/PersonDetails.cshtml
+++ b/BBTDWeb/BBTD.Mvc/Views/SourceData/PersonDetails.cshtml
@@ -1,7 +1,5 @@
 ﻿@model BBTD.Mvc.Models.Person
 
-<h1>Database item</h1>
-
 <div>
     <h4>Person</h4>
     <hr />
@@ -57,5 +55,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-outline-primary">Back to List</a>
 </div>
