--- a/BBTDWeb/BBTD.Mvc/Views/LogAnalysis/OutputDataDetails.cshtml
+++ b/BBTDWeb/BBTD.Mvc/Views/LogAnalysis/OutputDataDetails.cshtml
@@ -1,11 +1,6 @@
 ﻿@model OutputDataFile
 
 <h1>Data in file @(Model.Name)</h1>
-
-
-
-
-
 <div class="accordion" id="accordionExample">
     <div class="accordion-item">
         <h2 class="accordion-header" id="headingOne">
@@ -17,36 +12,35 @@
             <div class="accordion-body">
                 <table class="table">
                     <thead>
-                        <tr>
-                            <th>Message</th>
-                            <th>Level</th>
-                            <th>Timestamp</th>
-                            <th>Application</th>
-                            <th>Reference</th>
-                            <th>Operation</th>
-                            <th></th>
+                        <tr class="row">
+                            <th class="col-6">Message</th>
+                            <th class="col-1">Level</th>
+                            <th class="col-2">Timestamp</th>
+                            <th class="col-1">Application</th>
+                            <th class="col-1">Reference</th>
+                            <th class="col-1">Operation</th>
                         </tr>
                     </thead>
                     <tbody>
                         @foreach (var item in Model.LogRecords)
                         {
-                            <tr>
-                                <td>
+                            <tr class="row">
+                                <td class="col-6">
                                     @Html.DisplayFor(modelItem => item.Message)
                                 </td>
-                                <td>
+                                <td class="col-1">
                                     @Html.DisplayFor(modelItem => item.LevelString)
                                 </td>
-                                <td>
+                                <td class="col-2">
                                     @Html.DisplayFor(modelItem => item.ExactTimestamp)
                                 </td>
-                                <td>
+                                <td class="col-1">
                                     @Html.DisplayFor(modelItem => item.Application)
                                 </td>
-                                <td>
+                                <td class="col-1">
                                     @Html.DisplayFor(modelItem => item.Reference)
                                 </td>
-                                <td>
+                                <td class="col-1">
                                     @Html.DisplayFor(modelItem => item.Operation)
                                 </td>
                             </tr>
@@ -68,11 +62,16 @@
                     <thead>
                         <tr>
                             <th>Record No</th>
-                            <th>Total</th>
-                            <th>Image Generation</th>
-                            <th>Image Loading</th>
-                            <th>Barcode Reading</th>
-                            <th></th>
+                            <th>BC size [mod]</th>
+                            <th>BC size [px]</th>
+                            <th>BC size [mm]</th>
+                            <th>Mod size [px]</th>
+                            <th>Mod size [mm]</th>
+                            <th>Px/mm</th>
+                            <th>Image Generation [ms]</th>
+                            <th>Image Loading [ms]</th>
+                            <th>Barcode Reading [ms]</th>
+                            <th>Total [ms]</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -83,7 +82,22 @@
                                     @Html.DisplayFor(modelItem => item.RecordNumber)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.TotalTime)
+                                    @($"{item.BarcodeWidthMod}x{item.BarcodeHeightMod}")
+                                </td>
+                                <td>
+                                    @($"{item.BarcodeWidthPx}x{item.BarcodeHeightPx}")
+                                </td>
+                                <td>
+                                    @($"{item.BarcodeWidthMm:0.00}x{item.BarcodeHeightMm:0.00}")
+                                </td>
+                                <td>
+                                    @($"{item.ModuleWidthPx:0.00}x{item.ModuleHeightPx:0.00}")
+                                </td>
+                                <td>
+                                    @($"{item.ModuleWidthMm:0.00}x{item.ModuleHeightMm:0.00}")
+                                </td>
+                                <td>
+                                    @($"{item.PixelMmRatioX:0.00}x{item.PixelMmRatioY:0.00}")
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.ImageGenerationTime)
@@ -93,6 +107,9 @@
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.BarcodeReadingTime)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.TotalTime)
                                 </td>
                             </tr>
                         }
@@ -109,7 +126,8 @@
         </h2>
         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <img src="/LogAnalysis/TimeSeries?name=@(Model.Name)" />
+                <img src="/LogAnalysis/Distribution?name=@(Model.Name)" />
             </div>
         </div>
     </div>
