--- a/BBTDWeb/BBTD.Mvc/Views/Setup/Index.cshtml
+++ b/BBTDWeb/BBTD.Mvc/Views/Setup/Index.cshtml
@@ -24,20 +24,41 @@
                 <span asp-validation-for="BarcodeType" class="text-danger"></span>
             </div>
             <hr />
-            @*<div class="form-group">
-                <label asp-for="GraylogUrl" class="control-label"></label>
-                <input asp-for="GraylogUrl" type="text" class="form-control">
-                <span asp-validation-for="GraylogUrl" class="text-danger"></span>
-            </div>*@
+            <div class="form-group">
+                <label asp-for="ServerTimeoutMilliseconds" class="control-label"></label>
+                <input asp-for="ServerTimeoutMilliseconds" type="number" class="form-control" min="0">
+                <span asp-validation-for="ServerTimeoutMilliseconds" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="BarcodeSize" class="control-label"></label>
-                <input asp-for="BarcodeSize" type="number" class="form-control" min="1">
+                <input asp-for="BarcodeSize" type="number" class="form-control" min="100" step="100">
                 <span asp-validation-for="BarcodeSize" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TimeoutMilliseconds" class="control-label"></label>
-                <input asp-for="TimeoutMilliseconds" type="number" class="form-control" min="0">
-                <span asp-validation-for="TimeoutMilliseconds" class="text-danger"></span>
+                <label asp-for="ScreenWidthPx" class="control-label"></label>
+                <input asp-for="ScreenWidthPx" type="number" class="form-control" min="0">
+                <span asp-validation-for="ScreenWidthPx" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ScreenHeightPx" class="control-label"></label>
+                <input asp-for="ScreenHeightPx" type="number" class="form-control" min="0">
+                <span asp-validation-for="ScreenHeightPx" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="ScreenWidthMm" class="control-label"></label>
+                <input asp-for="ScreenWidthMm" type="number" class="form-control" min="0">
+                <span asp-validation-for="ScreenWidthMm" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ScreenHeightMm" class="control-label"></label>
+                <input asp-for="ScreenHeightMm" type="number" class="form-control" min="0">
+                <span asp-validation-for="ScreenHeightMm" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DistanceFromScreen" class="control-label"></label>
+                <input asp-for="DistanceFromScreen" type="number" class="form-control" min="0" step="5">
+                <span asp-validation-for="DistanceFromScreen" class="text-danger"></span>
             </div>
         </div>
         <div class="col">
