--- a/BBTDWeb/BBTD.Mvc/Views/Shared/_Layout.cshtml
+++ b/BBTDWeb/BBTD.Mvc/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark btn btn-outline-primary m-1" asp-area="" asp-controller="TestingArea" asp-action="Index">Testing Area</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark btn btn-outline-primary m-1" asp-area="" asp-controller="LogAnalysis" asp-action="LastLogList">Logs</a>
+                            <a class="nav-link text-dark btn btn-outline-primary m-1" asp-area="" asp-controller="LogAnalysis" asp-action="LogBatchStartList">Logs</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark btn btn-outline-primary m-1" asp-area="" asp-controller="LogAnalysis" asp-action="OutputData">Output Data</a>
