--- a/BBTDWeb/BBTD.Mvc/Views/SourceData/PersonDetails.cshtml
+++ b/BBTDWeb/BBTD.Mvc/Views/SourceData/PersonDetails.cshtml
@@ -50,7 +50,7 @@
             Barcode
         </dt>
         <dd class="col-sm-10">
-            <img src="/Home/Barcode/@Model.Id" />
+            <img src="/TestingArea/Barcode/@Model.Id" />
         </dd>
     </dl>
 </div>
